# GDAP

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  conda_list.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start_app.sh  streamlit_app.py
.github/workflows/: deploy.yml
.streamlit/: config.toml  pages.toml  pages_sections.toml
app/: Home.py  app.py  functions.py  home.py  model_parms.py  model_training.py  st_app.py  streamlit_app.py  ui.py  utils.py  visualizations.py
app/.streamlit/: config.toml  pages.toml  pages_sections.toml
app/analysis/: 1_Model_Training.py  data_import.py  graph_construction.py  models.py  predictions.py
app/models/: model_parms.py  sklearn.py  tesnorfloow.py
app/pages/: 2_Predictions.py
app/streamlit_helpers/: cache_data.py  embeddings.py
app/tools/: graph_visualization.py  model_evaluator.py
app/utils/: graph_files.py  models_files.py  state.py  style.py  ui.py
app/views/: about.py  faqs.py  home.py
app/views/analysis/: data_collection.py  graph_construction.py  model_evaluation.py  model_prediction.py  model_training.py
configs/: conda_requirements.txt  mkdocs.yml  requirements.txt
docs/: index.md
docs/reports/: faqs.md  google_cloud_setup.md  introduction.md
models/: lr_alzheimer.joblib
notebook/: Grape.ipynb  Nodevectors Node Embeddings and Classification.ipynb  main.ipynb
results/lung/classifier_models/: Logistic_Regression.pkl  gb_classifier.pkl  tf.keras
results/lung/network/: positive_edges.npy
results/lung/predictions/: associated_prediction_results.csv  non_associated_results.csv
src/: BigQuery.sql  __init__.py  alzheimer_disease_associations.sql  bigraph.py  config.py  edge_utils.py  embeddings.py  graph_builder.py  graph_composer.py  main.py  model_evaluation.py  model_selection.py  ppi_data.py  prep_utils.py
src/dataset/: main.py
src/dataset/open_targets/: TODO.md  bigquery_client.py  (+2 more)
src/edges/: edge_predictions.py
src/embeddings/: ggvec.py  node2vec.py  prone.py  simple_node_embedding.py
src/graphs/: __init__.py  bigraph.py  helper.py
src/models/: __init__.py  ml_models.py  model_evaluation.py  model_training.py
src/open_targets/: TODO.md  bigquery_fetcher.py  graphql_fetcher.py  tests.py
tests/: conftest.py  test_app.py  test_bigquery_client.py  test_embeddings.py  test_graphs.py  test_models.py
(+42 files in other folders)
