[project]
name = "gdap"
description = "gdap predicts gene-disease associations using graph embeddings and machine learning, integrating STRING-DB and Open Targets data."
readme = "README.md"
# dynamic = ["version"]
version = "0.1.0" 
requires-python = ">=3.11"

dependencies = [
    "csrgraph==0.1.28",
    "db-dtypes==1.3.0",
    "gensim==4.3.3",
    "google-cloud-bigquery==3.25.0",
    "joblib==1.4.2",
    "matplotlib==3.9.2",
    "networkx==2.5.1",
    "numba==0.60.0",
    "numpy<2.0",
    "pandas==2.2.3",
    "protobuf==3.20.3",
    "python-dotenv==1.0.1",
    "pyvis==0.3.2",
    "types-requests>=2.32.4.20250611",
    "scikit-learn==1.5.2",
    "scipy<1.14.0",
    "seaborn==0.13.2",
    "st-pages==1.0.1",
    "stqdm==0.0.5",
    "streamlit==1.39.0",
    "tensorflow==2.17.0",
    "tqdm==4.66.5",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "ruff",
    "ipykernel>=6.29.5",
]

[tool.ruff]
exclude = [".venv/"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # Annotations: Enforce type annotations
    "ANN",
    # Complexity: Enforce a maximum cyclomatic complexity
    "C90",
    # Pydocstyle: Enforce docstrings
    "D",
    # Pyflakes.
    "F",
    # Isort: Enforce import order
    "I",
    # Numpy: Enforce numpy style
    "NPY",
    # Print: Forbid print statements
    "T20",
]
ignore = [
    # Allow self and cls to be untyped, and allow Any type
    "ANN101", "ANN102", "ANN401",
    # Pydocstyle ignores
    "D100", "D101", "D104", "D203", "D212", "D401",
    # Allow use of f-strings in logging
    "G004"
]

[tool.pydoclint]
style = "sphinx"
exclude = "test_"
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
require-return-section-when-returning-nothing = false

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["gdap"]
package-dir = {"" = "src"}

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools.dynamic]
version = {attr = "gdap.version.__version__"}
